# gpqa-summarization-task

./: .gitignore  README.md  gpqa_results.csv  plotting.ipynb  pyproject.toml
inspect_evals/src/inspect_evals/: _registry.py
summarizer_logs/comp-ratio-0.1/summarization-cut/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.1/summarization-llm/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.2/summarization-cut/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.2/summarization-llm/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.3/summarization-cut/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.3/summarization-llm/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.4/summarization-cut/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.4/summarization-llm/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.5/summarization-cut/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.5/summarization-llm/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.6/summarization-cut/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.6/summarization-llm/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.7/summarization-cut/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.7/summarization-llm/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.8/summarization-cut/: summarizer_results_20250127.csv
summarizer_logs/comp-ratio-0.8/summarization-llm/: summarizer_results_20250127.csv
(+8 files in other folders)
