[project]
name = "gpqa-summarization"
version = "0.1.0"
description = "GPQA Summarization Task"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inspect-ai>=0.3.59",
    "matplotlib>=3.10.0",
    "openai>=1.60.1",
    "pandas>=2.2.3",
    "tiktoken>=0.8.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5", "ipywidgets>=8.1.5"]
